# ml-lab

./: .gitignore  pyproject.toml
ml_lab/cartpole_ac_torch/: __main__.py
ml_lab/cartpole_dqn_torch/: __main__.py
ml_lab/cartpole_ql/: __main__.py
ml_lab/pytorch_mnist/: __main__.py
ml_lab/simple_game/: __init__.py  __main__.py
ml_lab/tensorflow_mnist/: __main__.py
ml_lab/tetris/: __init__.py
ml_lab/tetris_ai/: __main__.py
ml_lab/tetris_ai_v2/: __init__.py  __main__.py  model.py  player.py  run.py  tetris.py
ml_lab/tetris_ai_v3/: __main__.py  agent.py  main.py  mcts.py  model.py  player.py  run.py  tetris.py
tests/: test_ml_lab.py
tests/tetris/: test_tetris.py
tests/tetris_ai_v2/: test_tetris.py
